# airbyte

airbyte-integrations/connectors/source-jubelio/: .gitignore  Dockerfile  INCREMENTAL_SYNC_SUMMARY.md  README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml  requirements.txt
airbyte-integrations/connectors/source-jubelio/docs/: incremental-sync.md
airbyte-integrations/connectors/source-jubelio/docs/jubelio/: openapi.yaml
airbyte-integrations/connectors/source-jubelio/docs/jubelio/paths/: accounts_lookup_all.yaml  blibli_pickupPoints.yaml  cashbank_payments_.yaml  cashbank_payments_id.yaml  cashbank_receives.yaml  cashbank_receives_id.yaml  contact_category_.yaml  contacts_.yaml  contacts_customers-suppliers_.yaml  contacts_customers_.yaml  contacts_suppliers_.yaml  contacts_{id}.yaml  couriers.yaml  couriers_tenant_{id}.yaml  couriers_{id}.yaml  inventory_.yaml  inventory_activity_.yaml  inventory_adjustments_.yaml  inventory_adjustments_warehouse.yaml  inventory_adjustments_{id}.yaml  inventory_catalog_.yaml  inventory_catalog_for-listing_{id}.yaml  (+233 more)
airbyte-integrations/connectors/source-jubelio/integration_tests/: acceptance.py  sample_config.json
airbyte-integrations/connectors/source-jubelio/source_jubelio/: __init__.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-jubelio/source_jubelio/schemas/: categories.json  contacts.json  orders.json  products.json
airbyte-integrations/connectors/source-jubelio/unit_tests/: conftest.py  test_incremental_streams.py  test_source.py  test_streams.py
(+308 files in other folders)
