[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.1.0"
name = "source-jubelio"
description = "Source implementation for Jubelio."
authors = ["Airbyte <contact@airbyte.io>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.airbyte.com/integrations/sources/jubelio"
homepage = "https://airbyte.com"
repository = "https://github.com/airbytehq/airbyte"

[[tool.poetry.packages]]
include = "source_jubelio"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
airbyte-cdk = "^7.3.4"

[tool.poetry.scripts]
source-jubelio = "source_jubelio.run:run"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.9.3"
pytest = "^8.0.0"
pytest-mock = "^3.6.1"

[tool.poe]
include = [
    "${POE_GIT_DIR}/poe-tasks/poetry-connector-tasks.toml",
]